# core

./: AGENTS.md  Cargo.toml  deny.toml
.cargo/: audit.toml  config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  conventional-commits.yml  coverage.yml  security.yml
crates/brigid-api/: Cargo.toml
crates/brigid-api/src/: error.rs  lib.rs  middleware.rs  router.rs  state.rs
crates/brigid-api/src/routes/: auth.rs  discovery.rs  health.rs  mod.rs
crates/brigid-api/tests/: integration.rs
crates/brigid-did/: Cargo.toml
crates/brigid-did/src/: error.rs  handler.rs  lib.rs  model.rs  peer.rs  web.rs
crates/brigid-identity/: Cargo.toml
crates/brigid-identity/src/: alias.rs  error.rs  identifier.rs  lib.rs  root_id.rs  vsid.rs
crates/brigid-oidc/: Cargo.toml
crates/brigid-oidc/src/: discovery.rs  error.rs  jti.rs  key.rs  lib.rs  token.rs
crates/brigid-store/: Cargo.toml
crates/brigid-store/migrations/: 0001_users.sql  0002_credentials.sql  0003_sessions.sql  0004_jti_blacklist.sql
crates/brigid-store/src/: error.rs  lib.rs  model.rs  store.rs
crates/brigid-ui/: Cargo.toml
crates/brigid-ui/src/: lib.rs  pages.rs
crates/brigid-webauthn/: Cargo.toml
crates/brigid-webauthn/src/: error.rs  lib.rs  service.rs
