[workspace]
members = [
    "crates/brigid-store",
    "crates/brigid-did",
    "crates/brigid-identity",
    "crates/brigid-webauthn",
    "crates/brigid-oidc",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"

[workspace.dependencies]
brigid-crypto = { git = "https://github.com/brig-id/crypto", branch = "dev" }
brigid-store = { path = "crates/brigid-store" }
brigid-identity = { path = "crates/brigid-identity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha3 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
panic = "abort"
