[workspace]
members = [
    "crates/brigid-store",
    "crates/brigid-did",
    "crates/brigid-identity",
    "crates/brigid-webauthn",
    "crates/brigid-oidc",
    "crates/brigid-api",
    "crates/brigid-ui",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false
rust-version = "1.85"

[workspace.dependencies]
brigid-crypto = { git = "https://github.com/brig-id/crypto", rev = "52d0983b557b6f294b9f40a9896d95d03e2e4681" }
brigid-store = { path = "crates/brigid-store" }
brigid-did = { path = "crates/brigid-did" }
brigid-identity = { path = "crates/brigid-identity" }
brigid-webauthn = { path = "crates/brigid-webauthn" }
brigid-oidc = { path = "crates/brigid-oidc" }
brigid-api = { path = "crates/brigid-api" }
brigid-ui = { path = "crates/brigid-ui" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hkdf = "0.12"
sha3 = "0.11"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
url = "2"
zeroize = { version = "1", features = ["derive"] }

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
strip = "debuginfo"

[profile.dev]
panic = "abort"
