[package]
name = "brigid-identity"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
brigid-crypto.workspace = true
sha3 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
base64ct = { version = "1", features = ["alloc"] }

[dev-dependencies]
tokio = { workspace = true }
