[package]
name = "brigid-oidc"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
brigid-identity.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
url.workspace = true
ed25519-dalek = { version = "2", features = ["rand_core", "pkcs8"] }
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
base64ct = { version = "1", features = ["alloc"] }
pkcs8 = { version = "0.10", features = ["alloc"] }

[dev-dependencies]
brigid-crypto.workspace = true
