[package]
name = "brigid-store"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
brigid-crypto.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
time.workspace = true
zeroize.workspace = true
hex = "0.4"

sqlx = { version = "0.8", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
    "macros",
] }

[dev-dependencies]
