[package]
name = "brigid-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
brigid-api.workspace = true
serde.workspace = true
serde_json.workspace = true
url.workspace = true

leptos = { version = "0.8", features = ["ssr"] }
reactive_graph = "0.2"
tachys = { version = "0.2", features = ["ssr"] }
