[package]
name = "brigid-webauthn"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true
rust-version.workspace = true

[dependencies]
brigid-crypto.workspace = true
brigid-store.workspace = true
brigid-identity.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
url.workspace = true
webauthn-rs = { version = "0.5", features = [
  "danger-allow-state-serialisation",
] }

[dev-dependencies]
sqlx = { version = "0.8", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "migrate",
  "macros",
] }
time.workspace = true
webauthn-authenticator-rs = { version = "0.5", features = ["softpasskey"] }
